# Dog-Shelter-Repository

./: CMakeLists.txt  Diagram.mdj  README.md  adoptions.html  adoptions.txt  dogs.txt  main.cpp
domain/: domain.cpp  domain.h  exceptions.h  validator.cpp  validator.h
repository/: AdoptionRepo.cpp  AdoptionRepo.h  CSVAdoptionRepo.cpp  CSVAdoptionRepo.h  HTMLAdoptionRepo.cpp  HTMLAdoptionRepo.h  fileAdoptionRepo.cpp  fileAdoptionRepo.h  filerepo.cpp  filerepo.h  repo.cpp  repo.h
service/: CommandController.cpp  CommandController.h  service.cpp  service.h  user_service.cpp  user_service.h
tests/: tests.cpp  tests.h
ui/: AdminGUI.cpp  AdminGUI.h  GUI.cpp  GUI.h  Table.cpp  Table.h  UserGUI.cpp  UserGUI.h  mainwindow.ui  ui.cpp  ui.h
